[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/view/gui/debug.gd" type="Script" id=1]
[ext_resource path="res://scripts/view/gui/gui.gd" type="Script" id=2]
[ext_resource path="res://scripts/view/gui/clock.gd" type="Script" id=3]
[ext_resource path="res://scripts/view/gui/toolkit.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/icons/icon_build_farm.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/icons/icon_overlay_green.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/icons/icon_build_lodge.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/icons/icon_toggle_pause.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/icons/icon_divinity.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/icons/icon_circle.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/icons/icon_overlay_red.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/icons/icon_speed_overlay.png" type="Texture" id=12]
[ext_resource path="res://assets/textures/icons/icon_build_hut.png" type="Texture" id=13]
[ext_resource path="res://assets/textures/icons/icon_toolkit.png" type="Texture" id=14]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="ImageTexture" id=4]
flags = 3
flags = 3
size = Vector2( 1910, 1070 )

[node name="GUI" type="Node2D"]
script = ExtResource( 2 )

[node name="Toolkit" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.862745 )
margin_left = 1356.0
margin_top = 6.0
margin_right = 1478.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 140, 38 )
script = ExtResource( 4 )

[node name="Examine" type="Button" parent="Toolkit"]
margin_left = 5.0
margin_top = 4.0
margin_right = 39.0
margin_bottom = 38.0

[node name="IconExamine" type="Sprite" parent="Toolkit/Examine"]
position = Vector2( 17, 17 )
scale = Vector2( 0.53125, 0.53125 )
texture = ExtResource( 10 )

[node name="Command" type="Button" parent="Toolkit"]
margin_left = 44.0
margin_top = 4.0
margin_right = 78.0
margin_bottom = 38.0

[node name="IconCommand" type="Sprite" parent="Toolkit/Command"]
position = Vector2( 17, 17 )
scale = Vector2( 0.53125, 0.53125 )
texture = ExtResource( 9 )

[node name="Build" type="Button" parent="Toolkit"]
margin_left = 83.0
margin_top = 4.0
margin_right = 117.0
margin_bottom = 38.0

[node name="IconBuild" type="Sprite" parent="Toolkit/Build"]
position = Vector2( 17, 17 )
scale = Vector2( 0.531249, 0.531249 )
texture = ExtResource( 14 )

[node name="ItemDisplay" type="Panel" parent="Toolkit"]
visible = false
modulate = Color( 1, 1, 1, 0.862745 )
margin_left = -19.0
margin_top = 45.0
margin_right = 142.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 140, 38 )

[node name="ExamineItem" type="Control" parent="Toolkit/ItemDisplay"]
visible = false
modulate = Color( 1, 1, 1, 0.862745 )
margin_right = 161.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 140, 38 )

[node name="Item" type="Button" parent="Toolkit/ItemDisplay/ExamineItem"]
margin_left = 2.0
margin_top = 2.0
margin_right = 159.0
margin_bottom = 119.0

[node name="CommandItems" type="Control" parent="Toolkit/ItemDisplay"]
visible = false
modulate = Color( 1, 1, 1, 0.862745 )
margin_right = 161.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 140, 38 )

[node name="Item" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 5.0
margin_top = 4.0
margin_right = 39.0
margin_bottom = 38.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item2" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 44.0
margin_top = 4.0
margin_right = 78.0
margin_bottom = 38.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item2"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item3" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 83.0
margin_top = 4.0
margin_right = 117.0
margin_bottom = 38.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item3"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item4" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 122.0
margin_top = 4.0
margin_right = 156.0
margin_bottom = 38.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item4"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item5" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 5.0
margin_top = 43.0
margin_right = 39.0
margin_bottom = 77.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item5"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item6" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 44.0
margin_top = 43.0
margin_right = 78.0
margin_bottom = 77.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item6"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item7" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 83.0
margin_top = 43.0
margin_right = 117.0
margin_bottom = 77.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item7"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item8" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 122.0
margin_top = 43.0
margin_right = 156.0
margin_bottom = 77.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item8"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item9" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 5.0
margin_top = 82.0
margin_right = 39.0
margin_bottom = 116.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item9"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item10" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 44.0
margin_top = 82.0
margin_right = 78.0
margin_bottom = 116.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item10"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item11" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 83.0
margin_top = 82.0
margin_right = 117.0
margin_bottom = 116.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item11"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item12" type="Button" parent="Toolkit/ItemDisplay/CommandItems"]
margin_left = 122.0
margin_top = 82.0
margin_right = 156.0
margin_bottom = 116.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/CommandItems/Item12"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="BuildItems" type="Control" parent="Toolkit/ItemDisplay"]
visible = false
self_modulate = Color( 1, 1, 1, 0.862745 )
margin_right = 161.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 140, 38 )

[node name="Item" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 5.0
margin_top = 4.0
margin_right = 39.0
margin_bottom = 38.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item"]
position = Vector2( 17, 17 )
texture = ExtResource( 13 )

[node name="Item2" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 44.0
margin_top = 4.0
margin_right = 78.0
margin_bottom = 38.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item2"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 7 )

[node name="Item3" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 83.0
margin_top = 4.0
margin_right = 117.0
margin_bottom = 38.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item3"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 5 )

[node name="Item4" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 122.0
margin_top = 4.0
margin_right = 156.0
margin_bottom = 38.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item4"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item5" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 5.0
margin_top = 43.0
margin_right = 39.0
margin_bottom = 77.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item5"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item6" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 44.0
margin_top = 43.0
margin_right = 78.0
margin_bottom = 77.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item6"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item7" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 83.0
margin_top = 43.0
margin_right = 117.0
margin_bottom = 77.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item7"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item8" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 122.0
margin_top = 43.0
margin_right = 156.0
margin_bottom = 77.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item8"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item9" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 5.0
margin_top = 82.0
margin_right = 39.0
margin_bottom = 116.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item9"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item10" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 44.0
margin_top = 82.0
margin_right = 78.0
margin_bottom = 116.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item10"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item11" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 83.0
margin_top = 82.0
margin_right = 117.0
margin_bottom = 116.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item11"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="Item12" type="Button" parent="Toolkit/ItemDisplay/BuildItems"]
margin_left = 122.0
margin_top = 82.0
margin_right = 156.0
margin_bottom = 116.0

[node name="Icon" type="Sprite" parent="Toolkit/ItemDisplay/BuildItems/Item12"]
position = Vector2( 17, 17 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 11 )

[node name="ItemOverlay" type="Sprite" parent="Toolkit/ItemDisplay"]
visible = false
scale = Vector2( 1.063, 1.063 )
texture = ExtResource( 12 )

[node name="ToolOverlay" type="Sprite" parent="Toolkit"]
visible = false
position = Vector2( 22, 21 )
texture = ExtResource( 12 )

[node name="Debug" type="Panel" parent="."]
margin_left = 15.0
margin_top = 855.0
margin_right = 215.0
margin_bottom = 1068.0
script = ExtResource( 1 )

[node name="Header" type="Label" parent="Debug"]
margin_left = 10.0
margin_top = 9.0
margin_right = 81.0
margin_bottom = 23.0
custom_styles/normal = SubResource( 3 )
text = "POSITIONS"

[node name="Data" type="Control" parent="Debug"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 213.0

[node name="Mouse" type="Panel" parent="Debug/Data"]
margin_left = 10.0
margin_top = 10.0
margin_right = 191.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Debug/Data/Mouse"]
margin_right = 57.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "MOUSE"

[node name="Text" type="Label" parent="Debug/Data/Mouse"]
margin_left = 57.0
margin_right = 183.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "(0,0)"

[node name="World" type="Panel" parent="Debug/Data"]
margin_left = 10.0
margin_top = 30.0
margin_right = 191.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Debug/Data/World"]
margin_right = 57.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "WORLD"

[node name="Text" type="Label" parent="Debug/Data/World"]
margin_left = 57.0
margin_right = 183.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "(0,0)"

[node name="Cell" type="Panel" parent="Debug/Data"]
margin_left = 10.0
margin_top = 50.0
margin_right = 191.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="Debug/Data/Cell"]
margin_right = 57.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "CELL"

[node name="Text" type="Label" parent="Debug/Data/Cell"]
margin_left = 57.0
margin_right = 184.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "(0,0)"

[node name="HexPos" type="Panel" parent="Debug/Data"]
margin_left = 10.0
margin_top = 70.0
margin_right = 191.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="Debug/Data/HexPos"]
margin_right = 57.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "HEX"

[node name="Text" type="Label" parent="Debug/Data/HexPos"]
margin_left = 57.0
margin_right = 183.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "(0,0)"

[node name="HexID" type="Panel" parent="Debug/Data"]
margin_left = 10.0
margin_top = 90.0
margin_right = 191.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="Debug/Data/HexID"]
margin_right = 57.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "HEX"

[node name="Text" type="Label" parent="Debug/Data/HexID"]
margin_left = 57.0
margin_right = 183.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "(0,0)"

[node name="Biome" type="Panel" parent="Debug/Data"]
margin_left = 10.0
margin_top = 110.0
margin_right = 191.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="Debug/Data/Biome"]
margin_right = 57.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "BIOME"

[node name="Text" type="Label" parent="Debug/Data/Biome"]
margin_left = 57.0
margin_right = 183.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 3 )
text = "grassland"

[node name="Clock" type="Panel" parent="."]
margin_left = 1486.0
margin_top = 6.0
margin_right = 1915.0
margin_bottom = 42.0
script = ExtResource( 3 )

[node name="DisplayTime" type="Label" parent="Clock"]
margin_left = 220.0
margin_top = 12.0
margin_right = 403.0
margin_bottom = 26.0
custom_styles/normal = SubResource( 3 )
text = "week 1 of spring, year 1"

[node name="Controls" type="Control" parent="Clock"]
margin_right = 171.0
margin_bottom = 30.0

[node name="TogglePause" type="TextureButton" parent="Clock/Controls"]
margin_left = 2.0
margin_top = 2.0
margin_right = 34.0
margin_bottom = 34.0
toggle_mode = true
texture_normal = ExtResource( 8 )

[node name="Speed1" type="Button" parent="Clock/Controls"]
margin_left = 38.0
margin_top = 2.0
margin_right = 70.0
margin_bottom = 34.0
text = "1"

[node name="Speed2" type="Button" parent="Clock/Controls"]
margin_left = 74.0
margin_top = 2.0
margin_right = 106.0
margin_bottom = 34.0
text = "2"

[node name="Speed3" type="Button" parent="Clock/Controls"]
margin_left = 110.0
margin_top = 2.0
margin_right = 142.0
margin_bottom = 34.0
text = "3"

[node name="Speed4" type="Button" parent="Clock/Controls"]
margin_left = 146.0
margin_top = 2.0
margin_right = 178.0
margin_bottom = 34.0
text = "4"

[node name="OverlayTurning" type="Sprite" parent="Clock/Controls"]
visible = false
position = Vector2( 18, 18 )
texture = ExtResource( 6 )

[node name="OverlayPaused" type="Sprite" parent="Clock/Controls"]
position = Vector2( 18, 18 )
texture = ExtResource( 11 )

[node name="OverlaySpeed" type="Sprite" parent="Clock/Controls"]
modulate = Color( 1, 1, 1, 0.611765 )
position = Vector2( 54, 18 )
texture = ExtResource( 12 )

[node name="GameMenu" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Background" type="Sprite" parent="GameMenu"]
position = Vector2( 960, 540 )
texture = SubResource( 4 )

[node name="Panel" type="Panel" parent="GameMenu"]
margin_left = 785.0
margin_top = 200.0
margin_right = 1135.0
margin_bottom = 760.0

[node name="Button" type="Button" parent="GameMenu/Panel"]
margin_left = 50.0
margin_top = 50.0
margin_right = 300.0
margin_bottom = 110.0
text = "New"

[node name="Button2" type="Button" parent="GameMenu/Panel"]
margin_left = 50.0
margin_top = 150.0
margin_right = 300.0
margin_bottom = 210.0
text = "Load"

[node name="Button3" type="Button" parent="GameMenu/Panel"]
margin_left = 50.0
margin_top = 250.0
margin_right = 300.0
margin_bottom = 310.0
text = "Settings"

[node name="Button4" type="Button" parent="GameMenu/Panel"]
margin_left = 50.0
margin_top = 350.0
margin_right = 300.0
margin_bottom = 410.0
text = "Credits"

[node name="Button5" type="Button" parent="GameMenu/Panel"]
margin_left = 50.0
margin_top = 450.0
margin_right = 300.0
margin_bottom = 510.0
text = "Exit"

[connection signal="pressed" from="Toolkit/Examine" to="Toolkit" method="select_tool" binds= [ "examine" ]]
[connection signal="pressed" from="Toolkit/Command" to="Toolkit" method="select_tool" binds= [ "command" ]]
[connection signal="pressed" from="Toolkit/Build" to="Toolkit" method="select_tool" binds= [ "build" ]]
[connection signal="pressed" from="Toolkit/ItemDisplay/ExamineItem/Item" to="Toolkit" method="_on_Examine_pressed"]
[connection signal="pressed" from="Toolkit/ItemDisplay/BuildItems/Item" to="Toolkit" method="select_item" binds= [ "hut" ]]
[connection signal="pressed" from="Toolkit/ItemDisplay/BuildItems/Item2" to="Toolkit" method="select_item" binds= [ "lodge" ]]
[connection signal="pressed" from="Toolkit/ItemDisplay/BuildItems/Item3" to="Toolkit" method="select_item" binds= [ "farm" ]]
